// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetail should render 1`] = `
<div>
  <div
    class="sc-AxirZ ihjXUE"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Test
      </div>
      <div
        class="font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail should render with bottom border 1`] = `
<div>
  <div
    class="sc-AxirZ gJdxOs"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Test
      </div>
      <div
        class="font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail should render with extra children 1`] = `
<div>
  <div
    class="sc-AxirZ ihjXUE"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Test
      </div>
      <div
        class="font-semibold"
      >
        test
      </div>
    </div>
    <div
      data-testid="TEST_CHILD"
    />
  </div>
</div>
`;

exports[`TransactionDetail should render with top border 1`] = `
<div>
  <div
    class="sc-AxirZ ihjXUE"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Test
      </div>
      <div
        class="font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail should render without border 1`] = `
<div>
  <div
    class="sc-AxirZ embDMS"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Test
      </div>
      <div
        class="font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail should render without padding 1`] = `
<div>
  <div
    class="sc-AxirZ ihjXUE"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Test
      </div>
      <div
        class="font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;
